# Novel-Leecher

./: Procfile  README.md  app.json  main.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: codeql.yml
Bot/: __init__.py  __main__.py  utils.py
