[tool.poetry]
name = "Nocturnetls-Scraper"
version = "0.1.0"
description = ""
authors = ["garganshul553@gmail.com "]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
cloudscraper = "^1.2.60"
bs4 = "^0.0.1"
telegraph = "^2.1.0"
Pyrogram = "^2.0.7"
TgCrypto = "^1.2.3"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
